# agent-first-starter

./: .gitignore  CHANGELOG.md  Makefile  README.md  SECURITY.md  pyproject.toml
docs/devlogs/: 2026-02-25-v0.1.3.md  2026-02-25-v0.1.4.md
src/agent_starter/: cli.py
tests/: test_cli.py
