[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-first-starter"
version = "0.1.0"
description = "Scaffold small agent-first software projects"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Alex Builds Source" }]
license = { text = "MIT" }
keywords = ["scaffold", "agent", "cli", "starter"]

[project.scripts]
agent-starter = "agent_starter.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
